--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .container-fluid{
     background-color: #393E46;
-    color: #4ECCA3;  
+    color: #4ECCA3; 
 }
 h2{
     font-family: 'Lobster', cursive;
@@ -17,9 +17,11 @@ h2{
     margin-left: 10px;
 }
 #feedback{
-    margin: 30px 0;
+    margin: 25px 0;
+    width: 100%;
     font-size: larger;
-    font-weight: bolder;    
+    font-weight: bolder;
+    background-color: #393E46;
 }
 #problem-list{
     margin-left: 30%;
@@ -28,4 +30,5 @@ h2{
     font-family: 'Indie Flower', cursive;
     font-size:25px;
     margin: auto;
+    height: 100vh;   
 }
